# rust_mysql_web_example

./: .gitignore  Cargo.toml  README.md
backend/: .env.example  Cargo.toml
backend/src/: commands.rs  http_responses.rs  main.rs  setup_db.rs
frontend/: .env  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/views/: HomeView.vue
migrations/: 0001_characters.sql
src/: main.rs
