[package]
name = "backend"
version = "0.1.0"
edition="2021"

[dependencies]
actix-web = "4.8"
tokio = { version = "1.0", features = ["full"]}
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio-rustls", "tls-rustls" ] }
dotenv = "0.15.0"
strum = "0.26"
strum_macros = "0.26"
serde = "1.0.204"
actix-cors = "0.7.0"

[[bin]]
name = "setup_db"
path = "src/setup_db.rs"

[[bin]]
name = "main"
path = "src/main.rs"